# fitgirl-downloader

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/: ROADMAP-PROGRESS.md
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  library.rs  main.rs  scraper.rs
src-tauri/src/db/: mod.rs
src-tauri/src/downloader/: mod.rs  segment.rs
src-tauri/src/extractor/: inject.js  mod.rs
src-tauri/tests/fixtures/: game_details.html  game_page.html  popular.html  search.html
src/components/: DownloadPanel.tsx  DownloadRow.tsx  ExtractControls.tsx  GameDetail.css  GameDetail.test.tsx  GameDetail.tsx  GameGroup.tsx  Layout.css  Layout.tsx  LibraryCard.tsx  LinksPanel.tsx  PartList.tsx  PartRow.test.tsx  PartRow.tsx  RepackCard.tsx  SettingsPanel.css  SettingsPanel.tsx  TagFilter.css  TagFilter.tsx  UrlBar.tsx
src/hooks/: useAppEvents.ts  useDebounced.test.ts  useDebounced.ts  useDownloads.ts  useExtraction.ts  useGameDetails.ts  useLibrary.ts  usePopular.ts  useSearch.ts
src/lib/: api.ts  download.test.ts  download.ts  downloadQueue.ts  extract.test.ts  extract.ts  format.test.ts  format.ts  library.ts  notify.ts  queryClient.ts  settings.ts  showcase.ts  updater.ts
src/pages/: Browse.css  Browse.test.tsx  Browse.tsx  Downloads.css  Downloads.test.tsx  Downloads.tsx  Game.css  Game.test.tsx  (+5 more)
(+26 files in other folders)
