[package]
name = "fitgirl-downloader"
version = "0.3.0"
description = "Browse, extract and download FitGirl repacks with a built-in multi-connection download manager."
authors = ["Sergei Kolyago"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fitgirl_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "cookies", "stream"] }
futures-util = "0.3"
tauri-plugin-dialog = "2"
scraper = "0.20"
tokio = { version = "1", features = ["full"] }
url = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2.3.3"

